addTour/EditTour/Details/filter